--- a/index.html
+++ b/index.html
@@ -3,10 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href='http://fonts.googleapis.com/css?family=Work+Sans:400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+
+    <header class="header">
+        <h1>Quick Add to Cart</h1>
+    </header>
+
+    <a href="#0" class="cd-cart">
+        <span>0</span>
+    </a>
+
+
+    <div class="mainCnt">
+        <div class="container">
+            <div class="row">
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 1</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-1.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+
+                    </div>
+                </div>
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 2</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-2.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+                    </div>
+                </div>
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 3</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-3.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+                    </div>
+                </div>
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 4</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-1.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+
+                    </div>
+                </div>
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 5</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-2.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+                    </div>
+                </div>
+                <div class="xl-4">
+                    <div class="mainCnt_item">
+                        <h3>Item 6</h3>
+                        <div class="mainCnt_item--imgWrap">
+                            <img src="static/img/thumb-3.jpg" alt="" class="responsive">
+                        </div>
+                        <button class="add-to-cart">
+                            <em>Add to Cart</em>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
