--- a/index.html
+++ b/index.html
@@ -23,70 +23,86 @@
             <div class="row">
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 1</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-1.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
-
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 1)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 2</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-2.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 2)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 3</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-3.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 3)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 4</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-1.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
-
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 4)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 5</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-2.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 5)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
                 <div class="xl-4">
                     <div class="mainCnt_item">
-                        <h3>Item 6</h3>
                         <div class="mainCnt_item--imgWrap">
                             <img src="static/img/thumb-3.jpg" alt="" class="responsive">
+                            <button class="add-to-cart">
+                                <em>Add to Cart</em>
+                            </button>
                         </div>
-                        <button class="add-to-cart">
-                            <em>Add to Cart</em>
-                        </button>
+                        <div class="mainCnt_item--description">
+                            <span class="card_itemName">Product name (Item 6)</span>
+                            <span class="card_itemPrice">Price $9.99</span>
+                        </div>
                     </div>
                 </div>
             </div>
