--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                             <img src="static/img/thumb-1.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -41,6 +44,9 @@
                             <img src="static/img/thumb-2.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -55,6 +61,9 @@
                             <img src="static/img/thumb-3.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -69,6 +78,9 @@
                             <img src="static/img/thumb-1.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -83,6 +95,9 @@
                             <img src="static/img/thumb-2.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -97,6 +112,9 @@
                             <img src="static/img/thumb-3.jpg" alt="" class="responsive">
                             <button class="add-to-cart">
                                 <em>Add to Cart</em>
+                                <svg x="0px" y="0px" width="32px" height="32px" viewBox="0 0 32 32">
+                                    <path stroke-dasharray="19.79 19.79" stroke-dashoffset="19.79" fill="none" stroke="#FFFFFF" stroke-width="2" stroke-linecap="square" stroke-miterlimit="10" d="M9,17l3.9,3.9c0.1,0.1,0.2,0.1,0.3,0L23,11"/>
+                                </svg>
                             </button>
                         </div>
                         <div class="mainCnt_item--description">
@@ -108,6 +126,9 @@
             </div>
         </div>
     </div>
+
+    <script src="static/js/jquery-2.1.4.js"></script>
+    <script src="static/js/common.js"></script>
 
 </body>
 </html>
