--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         </div>
     </div>
 
-    <script src="static/js/jquery-2.1.4.js"></script>
-    <script src="static/js/common.js"></script>
+    <!--<script src="static/js/jquery-2.1.4.js"></script>-->
+    <!--<script src="static/js/common.js"></script>-->
 
 </body>
 </html>
